# docs/swagger.json
@@ -7,8 +7,8 @@
         "version": "1.0"
     },
     "paths": {
-        "/db/ping": {
-            "get": {
+        "/tenant/create": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -16,14 +16,25 @@
                     "application/json"
                 ],
                 "tags": [
-                    "db"
+                    "tenant"
                 ],
-                "summary": "Db Ping",
+                "summary": "Create tenant",
+                "parameters": [
+                    {
+                        "description": "Create tenant request",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.TenantRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "Db Ping",
+                        "description": "Create tenant response",
                         "schema": {
-                            "$ref": "#/definitions/types.Response-any"
+                            "$ref": "#/definitions/api.Response-any"
                         }
                     }
                 }
@@ -31,7 +42,7 @@
         }
     },
     "definitions": {
-        "types.Response-any": {
+        "api.Response-any": {
             "type": "object",
             "properties": {
                 "code": {
@@ -43,6 +54,19 @@
                 },
                 "timestamp": {
                     "type": "integer"
+                }
+            }
+        },
+        "v1.TenantRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "description": "tenant description",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "tenant name",
+                    "type": "string"
                 }
             }
         }
